# tsp_rl_kg

./: .gitignore  README.md  RL.py  ablation_study_results.json  agent.py  agent_model.py  analysis.ipynb  concise_df_0.csv  concise_df_6.csv  custom_env.py  dev.ipynb  entities.py  entity_manager.py  environment.py  environment_droplet.yml  game_manager.py  graph_idx_manager.py  graph_manager.py  gym.py  gym_manager.py  heightmap_generator.py  helper_functions.py  kg.py  knowledge_graph.py  last_20_percent_stats_0.csv  last_20_percent_stats_6.csv  logger.py  main.py  md.md  merged_df.csv  pixel_art.py  pixelart_converter.py  pyproject.toml  renderer.py  renderer2.py  requirements.txt  results20240901_115205kg_completeness_0_25kg_completeness_0_25_metrics_csv  results20240901_115205kg_completeness_0_5kg_completeness_0_5_metrics_csv  results20240901_115205kg_completeness_0_75kg_completeness_0_75_metrics_csv  results20240904_233747kg_completeness_0_25kg_completeness_0_25_metrics_csv  (+19 more)
.github/workflows/: create-diagram.yml
7x7/maps/: 0.npy  1.npy  2.npy  3.npy  4.npy  5.npy  6.npy  7.npy  8.npy  9.npy
7x7_dataset/Entities/: entities_0.npy
Latex/Thesis plan/: main.aux  main.bbl  main.blg  main.out  main.tex  reference.bib
Latex/Thesis proposal Symbolic/: main.aux  main.dvi  main.out  main.tex
Old_code/: nothing.py
Writing/: Unsaved Document 1  game_data.csv  static_data.csv
diagrams/: environment.md  kg.md
logs/: evaluations.npz
mermaid_diagrams/: game_manager.md  sim_env.md
tsp_rl_kg/: main.py
utils/: copy_utils.py  logger.py  utility.py
(+58 files in other folders)
